feat(ui): add File → New Window to launch a second Deluge instance
Spawns a second, fully independent Deluge in its own OS process (new JVM) rather
than in-process: the firmware/hid layer (MatrixDriver, Flasher, PIC,
FirmwareDisplay) and several audio statics (noise seed, GlobalSidechainBus,
cpuDireness) plus the mainInstance static are process-global singletons that two
in-JVM instances would corrupt. A separate process sidesteps all of that and gets
its own audio line (the OS mixer sums the outputs).

- launchNewInstance() relaunches the exact current command via ProcessHandle
  (java binary + all JVM flags + jar), so required flags (--enable-preview,
  --add-modules jdk.incubator.vector, ZGC, --enable-native-access) are preserved;
  falls back to reconstructing from the running JVM if the OS hides the cmdline.
- Menu item under File (Ctrl+Shift+N).

Verified: ProcessHandle captures all flags on this platform, and two instances
launched from the built jar coexist — each boots and opens its own SourceDataLine.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HuW6MLXgh323f8BXpAfh96